# photon_debugger

./: CMakeLists.txt
sandbox/: CMakeLists.txt  bench_ray-bounce.py  sampler_gnuplot.cc  test_ray-bounce.cc
sandbox/ray-bounce/: bench.py  main_test.cc  plot-rays-ends.py
sources/inc/api/: resource_context.h
sources/inc/core/: logger.h
sources/inc/maths/: matrix.h  matrix.inl  redecimal.h  vector.h  vector.inl
sources/inc/raytracer/: surface_interaction.h
sources/src/api/: resource_context.cc
sources/src/maths/: redecimal.cc
sources/src/raytracer/integrators/: direct_lighting_integrator.cc
sources/src/raytracer/samplers/: halton_sampler.cc
sources/src/raytracer/shapes/: triangle.cc
